--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div>
       <h1 class="text-center fw-bold text-danger">
-        Valentine Budget : <span> 00</span>
+        Valentine Budget : <span>5000</span>
       </h1>
     </div>
 
@@ -28,7 +28,7 @@
             placeholder="type here Quantity"
           />
           <br />
-          <button onclick="handleKitkat()" id="kitkat-buy-btn" class="buy-btn">
+          <button id="kitkat-buy-btn" class="buy-btn">
             Buy Now
           </button>
         </div>
@@ -72,13 +72,7 @@
             type="text"
             placeholder="101"
           />
-          <button
-            onclick="handlePromoCode()"
-            class="btn btn-primary"
-            type="button"
-          >
-            Apply
-          </button>
+          <button id="apply-btn" class="btn btn-primary" type="button"> Apply</button>
         </div>
         <h2 class="mt-5">ALL COST :<span id="all-total"> 00</span></h2>
       </div>
